[package]
name = "gde"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
itertools = "0.13.0"
ratatui = { version = "0.28.1", features = ["all-widgets"] }
crossterm = "0.28.1"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
outdir-tempdir = "0.2"
tar = "0.4.40"
flate2 = "1.0.28"
glob = "0.3.1"

[[bin]]
name = "gde"
path = "src/bin/gde.rs"

[[bin]]
name = "gde-tui"
path = "src/bin/gde-tui.rs"
