[package]
name = "gde"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4", features = ["derive"] }
itertools = "0"
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = "0.29"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
outdir-tempdir = "0.2"
tar = "0.4.40"
flate2 = "1.0.28"
glob = "0.3.1"

[[bin]]
name = "gde"
path = "src/bin/gde.rs"

[[bin]]
name = "gde-tui"
path = "src/bin/gde-tui.rs"
